tests/baselines/reference/stringLiteralsWithEqualityChecks02.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralsWithEqualityChecks02.ts(12,5): error TS2365: Operator '===' cannot be applied to types '"foo"' and '"bar"'.
tests/cases/conformance/types/stringLiteral/stringLiteralsWithEqualityChecks02.ts(17,5): error TS2365: Operator '!==' cannot be applied to types '"foo"' and '"bar"'.


==== tests/cases/conformance/types/stringLiteral/stringLiteralsWithEqualityChecks02.ts (2 errors) ====
    interface Refrigerator {
        brrr: boolean;
    }
    
    let x: "foo";
    let y: "foo" | "bar";
    
    let b: boolean;
    b = x === y;
    b = "foo" === y
    b = y === "foo";
    b = "foo" === "bar";
        ~~~~~~~~~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types '"foo"' and '"bar"'.
    
    b = x !== y;
    b = "foo" !== y
    b = y !== "foo";
    b = "foo" !== "bar";
        ~~~~~~~~~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types '"foo"' and '"bar"'.
    
    